RESOLVED FIXED200205
The touch-action property was ignored on replaced elements (canvas, img etc)
https://bugs.webkit.org/show_bug.cgi?id=200205
Summary The touch-action property was ignored on replaced elements (canvas, img etc)
Simon Fraser (smfr)
Reported 2019-07-28 12:40:49 PDT
The touch-action property was ignored on replaced elements (canvas, img etc)
Attachments
Patch (5.92 KB, patch)
2019-07-28 12:43 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-07-28 12:43:23 PDT
Simon Fraser (smfr)
Comment 2 2019-07-28 12:43:25 PDT
WebKit Commit Bot
Comment 3 2019-07-29 11:31:10 PDT
Comment on attachment 375045 [details] Patch Clearing flags on attachment: 375045 Committed r247909: <https://trac.webkit.org/changeset/247909>
WebKit Commit Bot
Comment 4 2019-07-29 11:31:11 PDT
All reviewed patches have been landed. Closing bug.
Antoine Quint
Comment 5 2019-08-12 02:51:30 PDT
*** Bug 199977 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.